# Moteur-de-jeux---HAI819I

./: .gitignore
TP_Moteur_1/Moteur_TP1/: CMakeLists.txt
TP_Moteur_1/Moteur_TP1/common/: Time.cpp  Time.hpp  camera.hpp  mesh.cpp  model.cpp  model.hpp  shader.hpp
TP_Moteur_1/Moteur_TP1/resources/shaders/: fragment_shader.glsl
TP_Moteur_1/TP1_code/: CMakeLists.txt
TP_Moteur_1/TP1_code/TP1/: TP1  TP1.cpp  fragment_shader.glsl  vertex_shader.glsl
TP_Moteur_1/TP1_code/common/: objloader.hpp
TP_Moteur_Base/: CMakeLists.txt  imgui.ini
TP_Moteur_Base/common/: ColliderShape.hpp  Cone.hpp  CubeObjet.hpp  DataLogger.hpp  GUIManager.hpp  GameManager.hpp  GameObjet.hpp  InfiniteScene.hpp  InputManager.hpp  NormalObjet.hpp  PhysicsModel.hpp  PlayerSystem.hpp  RenderingModel.cpp  RenderingModel.hpp  Ressort.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp  SimulationData.hpp  SolarSystem.hpp  SphereObjet.hpp  TerrainSystem.hpp  Time.cpp  Time.hpp  Transform.cpp  Transform.hpp  WaterSystem.hpp  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  quaternion_utils.cpp  shader.cpp  shader.hpp
TP_Moteur_Base/imgui/: imgui_impl_glfw.cpp
TP_Moteur_Base/outputs/simulationData/: data.csv  data_compare.csv  data_explicite.csv  data_midpoint.csv  data_semi_explicite.csv  data_verlet.csv  ressort_data.csv  ressort_data_compare.csv
TP_Moteur_Base/resources/models/bunny_lod/: bunny0.off  bunny1.off  bunny2.off  bunny3.off
TP_Moteur_Base/resources/models/planete/: planete.mtl
TP_Moteur_Base/resources/shaders/: fragment_shader.glsl  fragment_shader_bunny.glsl  fragment_shader_infinite.glsl  fragment_shader_normal_objet.glsl  fragment_shader_terrain.glsl  fragment_shader_water.glsl  vertex_shader.glsl  vertex_shader_bunny.glsl  vertex_shader_infinite.glsl  vertex_shader_normal_objet.glsl  vertex_shader_planete.glsl  vertex_shader_terrain.glsl  vertex_shader_water.glsl
TP_Moteur_Base/src/: main.cpp
